--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
@@ -1,6 +1,7 @@
 ViliPreferencePage.0=General settings for Vili:
 ViliPreferencePage.1=Search snapshot repositories for skeleton archives
 ViliPreferencePage.2=Search snapshot repositories for fragment archives
+ViliPreferencePage.3=\u30aa\u30d5\u30e9\u30a4\u30f3
 PreferenceInitializer.10=Create a project based on Ymir. Freyja ZPT Engine is available as the template engine. 
 PreferenceInitializer.13=Create a project based on Ymir. Freyja ZPT Engine is available as the template engine, \
   and DBFlute for database accessing.
@@ -18,4 +19,4 @@ PreferenceInitializer.68=Vili skeleton project
 PreferenceInitializer.69=Create a project to develop a Vili project skeleton.
 PreferenceInitializer.71=Vili fragment project
 PreferenceInitializer.72=Create a project to develop a Vili project fragment.
-  
+TemplatePreferencePage.0=Skeleton template to create new projects.
