--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -9,20 +9,11 @@ NewProjectWizard.23=Set up classpath
 NewProjectWizard.25=Set up JDK compliance settings
 NewProjectWizard.1=Copy dependencies
 NewProjectWizard.2={0} is required.
+NewProjectWizardThirdPage.0=Ymir project settings
 NewProjectWizardThirdPage.1=Project settings
 NewProjectWizardThirdPage.2=Specify project settings.
-NewProjectWizardThirdPage.3=View
-NewProjectWizardThirdPage.4=Encoding
-NewProjectWizardThirdPage.5=Connect to database
-NewProjectWizardThirdPage.6=Database
-NewProjectWizardThirdPage.7=Driver's class name
-NewProjectWizardThirdPage.8=URL for connection
-NewProjectWizardThirdPage.9=User name
-NewProjectWizardThirdPage.0=Database type
-NewProjectWizardThirdPage.10=Password
 NewProjectWizardThirdPage.11=General
 NewProjectWizardThirdPage.12=Skeleton specific
-NewProjectWizardThirdPage.13=There is no configurable settings.
 NewProjectWizardFirstPage.1=Project skeleton
 NewProjectWizardFirstPage.2=Specify project skeleton.
 NewProjectWizardFirstPage.5=Available skeleton templates:
@@ -31,22 +22,6 @@ NewProjectWizardFirstPage.7=Group ID
 NewProjectWizardFirstPage.8=Artifact ID
 NewProjectWizardFirstPage.9=Version
 NewProjectWizardFirstPage.0=Downloading a skeleton archive from repositories... (this process may take a lot of time)
-YmirConfigurationComponent.2=Ymir project
-YmirConfigurationComponent.4=Auto generation
-YmirConfigurationComponent.5=Specify common parent class for all Page class
-YmirConfigurationComponent.6=Common parent class name
-YmirConfigurationComponent.7=Don't generate Dto classes if Freyja's render classes are available
-YmirConfigurationComponent.8=Enable Beantable feature
-YmirConfigurationComponent.9=Generate Dto classes corresponding to form tags
-YmirConfigurationBlock.0=Enable auto generation feature
-YmirConfigurationBlock.1=Field name's prefix and suffix
-YmirConfigurationBlock.2=Activate the inplace editor for HTML templates when double-clicked on a Web browser
-YmirConfigurationBlock.3=Display the control panel when mouse cursor is over the top of a Web browser
-YmirConfigurationBlock.4=Miscellaneous
-YmirConfigurationBlock.5=HOT deploy
-YmirConfigurationBlock.6=Use Seasar2.4's HOT deploy mechanism
-YmirConfigurationBlock.7=Use JavaRebel's HOT deploy mechanism (Need to set up a servlet container to enable JavaRebel)
-YmirConfigurationBlock.8=Do not use HOT deploy mechanism
 NewProjectWizardSecondPage.1=Create a Ymir project
 NewProjectWizardSecondPage.2=Create a Ymir project in the workspace or in an external location.
 NewProjectWizardSecondPage.3=Project inforamtion
@@ -58,13 +33,6 @@ NewProjectWizardSecondPage.8=Use project name as artifact ID
 NewProjectWizardSecondPage.9=Version
 NewProjectWizardSecondPage.0=JRE Container
 NewProjectWizardFirstPage.10=Use the latest version
-NewProjectWizardFirstPage.11=Get skeleton archive
-YmirConfigurationComponent.10=Generate Dao and entity classes for S2Dao
-YmirConfigurationComponent.11=Generate Dxo classes for S2Dxo
-YmirConfigurationComponent.12=Generate Converter classes to convert Dto and entity
-YmirConfigurationComponent.13=Eclipse Cooperation
-YmirConfigurationComponent.14=Synchronize resources automatically with ResourceSynchronizer plugin
-YmirConfigurationComponent.15=URL for the synchronization server
 SkeletonArtifactResolver.1=Skeleton archive has not been found. Please change condition.
 SkeletonArtifactResolver.0=Specified archive is not a Vili skeleton.
 NewProjectWizardFirstPage.11=Skeleton
