--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages_ja.properties
@@ -1,9 +1,9 @@
-NewProjectWizard.12=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u3066\u3044\u307e\u3059...
+NewProjectWizard.12=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.13=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30b9\u30b1\u30eb\u30c8\u30f3\u306e\u5c55\u958b\u306b\u5931\u6557\u3057\u307e\u3057\u305f\u3002
 NewProjectWizard.14=Page\u306e\u30b9\u30fc\u30d1\u30fc\u30af\u30e9\u30b9\u3092\u751f\u6210\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.18=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u8a55\u4fa1\u306b\u5931\u6557\u3057\u307e\u3057\u305f: 
 NewProjectWizard.19=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
-NewProjectWizard.11=\u65b0\u898fYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
+NewProjectWizard.11=\u65b0\u898fVili\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
 NewProjectWizard.20=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306e\u30d7\u30ed\u30d1\u30c6\u30a3\u3092\u66f4\u65b0\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.23=\u30af\u30e9\u30b9\u30d1\u30b9\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 NewProjectWizard.25=JDK\u30b3\u30f3\u30d7\u30e9\u30a4\u30a2\u30f3\u30b9\u306e\u8a2d\u5b9a\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
@@ -16,8 +16,8 @@ ConfigureParametersPage.2=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u5404\u7a2e
 ConfigureParametersPage.11=\u5168\u822c
 ConfigureParametersPage.12=\u30b9\u30b1\u30eb\u30c8\u30f3\u56fa\u6709
 ConfigureParametersPage.13=\u8a2d\u5b9a\u53ef\u80fd\u306a\u9805\u76ee\u306f\u3042\u308a\u307e\u305b\u3093\u3002
-ConfigureProjectPage.1=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u4f5c\u6210
-ConfigureProjectPage.2=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
+ConfigureProjectPage.1=Vili\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u4f5c\u6210
+ConfigureProjectPage.2=Vili\u3092\u4f7f\u3063\u3066\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
 ConfigureProjectPage.3=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u60c5\u5831
 ConfigureProjectPage.4=\u30eb\u30fc\u30c8\u30d1\u30c3\u30b1\u30fc\u30b8\u540d
 ConfigureProjectPage.5=\u30b0\u30eb\u30fc\u30d7ID
