--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
@@ -22,7 +22,7 @@ PreferenceInitializer.72=Create a project to develop a Vili project fragment.
 PreferenceInitializer.74=Vili Web application skeleton project
 PreferenceInitializer.75=Create a project to develop a Vili web application project skeleton.
 PreferenceInitializer.76=Yonex-based integration test environment
-PreferenceInitializer.77=Add an integration-test environment based on Yonex. The version of Yonex is 0.1-SNAPSHOT.
+PreferenceInitializer.77=Add an integration-test environment based on Yonex.
 TemplatePreferencePage.0=Skeleton template to create new projects.
 TemplatePreferencePage.1=Error
 TemplatePreferencePage.2=Syntax error has been found in template: 
