--- a/vili-api/src/main/java/org/seasar/ymir/vili/maven/util/messages_ja.properties
+++ b/vili-api/src/main/java/org/seasar/ymir/vili/maven/util/messages_ja.properties
@@ -1,1 +1,2 @@
-MavenUtils.1=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30e1\u30bf\u30c7\u30fc\u30bf\u3092pom.xml\u306b\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
+ArtifactUtils.1=\u6587\u5b57\u5217\u3068\u3057\u3066\u30ea\u30bd\u30fc\u30b9\u3092\u53d6\u5f97\u3057\u3066\u3044\u307e\u3059...
+ArtifactUtils.2=\u30d7\u30ed\u30d1\u30c6\u30a3\u30ea\u30bd\u30fc\u30b9\u3092\u53d6\u5f97\u3057\u3066\u3044\u307e\u3059...
